--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 						<div class="color-text">
 							<p>
 								The bubble chart shows how various local factors impact housing prices. 
-								It considers three key elements: Population category (<high>high</high>, <moderate>moderate</moderate>, <low>low</low>), 
+								It considers three key elements: Popular Industries within each States,
 								Population Density in square miles, and Crime Rate per 100,000 people. 
 								What's clear from the chart is that areas with lower crime rates, especially in comparison to their population density, 
 								tend to have higher median housing prices. In simpler terms, safety is a big selling point for homes. 
@@ -99,7 +99,7 @@
 								have very high median housing prices, we can see that <strong>New York</strong> has less <strong>crime rate</strong> and has a higher
 								<strong>population density</strong> compared to <strong>California</strong>. Therefore, we see that it's price is higher than California's, 
 								even though they are very close in housing prices. Obviously there are more factors like economic hubs in different states which could drive
-								appeal for more residents.
+								appeal for more residents, like the chart showed different colour channels for the different industries.
 							</p>
 						</div>
 					</div>
